<resources>
    <string name="app_name">Pink Note</string>
    <string name="note_hint_title">Title</string>
    <string name="note_hint_description">Description</string>
    <string name="note_hint_priority">Priority</string>
    <string name="note_hint_date">Last update</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>

    // About
    <string name="app_developer">
        Developed by Elvin A.
        \ngithub.com/L-win
        \n2020
    </string>
    <string name="app_current_version">v1.0, October 2020</string>
    <string name="app_recent_change">Oct 1, 2020. First release.</string>

</resources>