<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".AddEditNoteActivity"
    android:background="@color/colorPrimaryDark"
    android:id="@+id/main_layout"
    >

    <EditText
        android:id="@+id/edit_text_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15sp"
        android:hint="@string/note_hint_title"
        android:inputType="textMultiLine"
        android:elevation="5dp"
        android:background="@drawable/edit_text_background"
        android:layout_marginTop="10sp"
    />

    <EditText
        android:id="@+id/edit_text_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxHeight="400dp"
        android:minHeight="150dp"
        android:gravity="top"
        android:layout_marginTop="10dp"
        android:padding="15dp"
        android:hint="@string/note_hint_description"
        android:inputType="textMultiLine"
        android:elevation="5dp"
        android:background="@drawable/edit_text_background"
        />


    <Switch
        android:id="@+id/switch1"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="Pin"
        android:background="@drawable/edit_text_background"
        />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="4dp"
        android:layout_marginTop="10dp"
        android:elevation="5dp"
        android:background="@drawable/edit_text_background">

        <TextView
            android:id="@+id/text_view_date_added"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"

            android:padding="10dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:text="@string/note_hint_date"
            android:padding="10dp"
            />

    </RelativeLayout>


</LinearLayout>